Portfolio: fix cvPermissions window overlapping with fixed icons

--- a/css/cvPermissions.css
+++ b/css/cvPermissions.css
@@ -14,7 +14,7 @@
     border-radius: 1rem;
     opacity: 0.9;
     transition: all 1s ease-in 2s;
-
+    z-index: 69;
 }
 
 .cvico {
